// Copyright (c) Mondoo, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package mondoo.ranger.grpcbench;
option go_package = "go.mondoo.com/ranger-rpc/benchmark/grpcbench";

service BenchmarkService {
	rpc RpcSmall(SmallQuery) returns (SmallResponse) {}
	rpc RpcEmpty(Empty) returns (DefaultResponse) {}
}

message SmallQuery {
	int64 id = 1;
	string message = 2;
	repeated string name = 3;
}

message SmallResponse {
	int64 id = 1;
	string message = 2;
	repeated string name = 3;
}

message Empty {}

message DefaultResponse {
	string message = 1;
}